--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/material": "^5.15.11",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
     "next": "14.1.0",
     "next-auth": "^4.24.10",
-    "react": "^18.3.1",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
